fixed invisible wiki toolbar-icons

--- a/public/styles.css
+++ b/public/styles.css
@@ -1210,3 +1210,7 @@ a.ui.labels .label:hover
     box-shadow: 0 0 0 1px #609926 inset!important;
     color: #609926!important;
   }
+
+  .editor-toolbar a {
+    color: #87ab63 !important;
+  }
